--- a/app/views/images/index.html.slim
+++ b/app/views/images/index.html.slim
@@ -1,8 +1,19 @@
-div 
-    
+
+div     
     - if current_user.present? 
         h2 class="bg-light text-dark" Új kép feltöltés:
-        = link_to "Feltöltés", new_image_path, class: "btn btn-success m-2"
+        br = link_to "Feltöltés", new_image_path, class: "btn btn-success m-2"
+        = link_to "NINCS KÉSZ", images_path(:done => "1"), class: "btn btn-success text-light m-2"
+        = link_to "CSAK KÉSZ", images_path(:done => "0"), class: "btn btn-success text-light m-2"
+        = link_to "MIND", images_path(:done => "2"), class: "btn btn-success text-light m-2"
+
+div class="row"
+    div class="col-1"
+        | Kész:
+        = @images_info_true
+    div class="col-1"
+        |Várakozik: 
+        = @images_info_false
 
 div.digg_pagination
     = will_paginate @images, :container => false
@@ -48,7 +59,6 @@ table.table.table-bordered.table-dark
                                         = link_to "Edit", edit_comment_path(com), class: "btn btn-primary text-light "
                                         = link_to "Töröl", com , method: "DELETE", class: "btn btn-primary text-light "
             td 
-                = link_to "Category", done_path(image.id, id: image.id, done:false), method: :post, remote: true
                 - if current_user.present? 
                     - if current_user.admin? 
                         - if image.done?
