--- a/app/views/images/index.html.slim
+++ b/app/views/images/index.html.slim
@@ -14,6 +14,9 @@ div class="row"
     div class="col-1"
         |Várakozik: 
         = @images_info_false
+    div class="col-1"
+        |Össz: 
+        = @images_info_all
 
 div.digg_pagination
     = will_paginate @images, :container => false
