--- a/app/views/images/index.html.slim
+++ b/app/views/images/index.html.slim
@@ -3,10 +3,23 @@ div
     - if current_user.present? 
         h2 class="bg-light text-dark" Új kép feltöltés:
         br = link_to "Feltöltés", new_image_path, class: "btn btn-success m-2"
-        = link_to "NINCS KÉSZ", images_path(:done => "0"), class: "btn btn-success text-light m-2"
-        = link_to "CSAK KÉSZ", images_path(:done => "1"), class: "btn btn-success text-light m-2"
-        = link_to "MIND", images_path(:done => "2"), class: "btn btn-success text-light m-2"
-
+        
+        -case params[:done]
+            -when "0"
+                = link_to "NINCS KÉSZ", images_path(:done => "0"), class: "btn btn-primary text-light m-2"            
+                = link_to "CSAK KÉSZ", images_path(:done => "1"), class: "btn btn-success text-light m-2"
+                = link_to "MIND", images_path(:done => "2"), class: "btn btn-success text-light m-2"
+            -when "1"
+                = link_to "NINCS KÉSZ", images_path(:done => "0"), class: "btn btn-success text-light m-2"            
+                = link_to "CSAK KÉSZ", images_path(:done => "1"), class: "btn btn-primary text-light m-2"
+                = link_to "MIND", images_path(:done => "2"), class: "btn btn-success text-light m-2"
+            -else
+                = link_to "NINCS KÉSZ", images_path(:done => "0"), class: "btn btn-success text-light m-2"            
+                = link_to "CSAK KÉSZ", images_path(:done => "1"), class: "btn btn-success text-light m-2"
+                = link_to "MIND", images_path(:done => "2"), class: "btn btn-primary text-light m-2"
+        
+            
+       
 div class="row"
     div class="col-1"
         | Kész:
