--- a/app/views/shared/_menu.html.erb
+++ b/app/views/shared/_menu.html.erb
@@ -20,7 +20,7 @@
                 <% if current_user.present? %>
 
                 <li class="nav-item">
-                    <%= link_to "Képek", images_path, class: "nav-link" %>
+                    <%= link_to "Képek", images_path(done: "0"), class: "nav-link" %>
                 </li>
                 <li class="nav-item active">
                   <%= link_to "Youtube", youtubes_path, class: "nav-link"  %>
