Youtube is megkapta a STATUS gombokat.

--- a/app/assets/stylesheets/images.scss
+++ b/app/assets/stylesheets/images.scss
@@ -27,7 +27,11 @@ body.scrollable {
 	}
 }
 
-
+body{
+	background-color: #152836
+  }
+  h2{color:#fff;margin-bottom:40px;text-align:center;font-weight:100;}
+ 
 .comment-box{
 	margin: 10px; 
 	border: 1px solid #ddd ;
