--- a/app/views/shared/_menu.html.erb
+++ b/app/views/shared/_menu.html.erb
@@ -23,7 +23,7 @@
                     <%= link_to "Képek", images_path(done: "0"), class: "nav-link" %>
                 </li>
                 <li class="nav-item active">
-                  <%= link_to "Youtube", youtubes_path, class: "nav-link"  %>
+                  <%= link_to "Youtube", youtubes_path(done: "0"), class: "nav-link"  %>
                 </li>
                
                 <li class="nav-item active">
