--- a/app/views/youtubes/index.html.slim
+++ b/app/views/youtubes/index.html.slim
@@ -1,3 +1,10 @@
+div     
+    - if current_user.present? 
+        h2 class="bg-light text-dark" Új link feltöltés:
+        br = link_to 'Új https://youtu.be link  feltöltés', new_youtube_path, class: "btn btn-success text-light"
+
+
+
 -case params[:done]
             -when "0"
                 = link_to "NINCS KÉSZ", youtubes_path(:done => "0"), class: "btn btn-primary text-light m-2"            
@@ -11,9 +18,21 @@
                 = link_to "NINCS KÉSZ", youtubes_path(:done => "0"), class: "btn btn-success text-light m-2"            
                 = link_to "CSAK KÉSZ", youtubes_path(:done => "1"), class: "btn btn-success text-light m-2"
                 = link_to "MIND", youtubes_path(:done => "2"), class: "btn btn-primary text-light m-2"
+
+
+div class="row"
+    div class="col-1"
+        | Kész:
+        = @images_info_true
+    div class="col-1"
+        |Várakozik: 
+        = @images_info_false
+    div class="col-1"
+        |Össz: 
+        = @images_info_all
+
 div.digg_pagination
     = will_paginate @youtubes, :container => false
-div = link_to 'Új https://youtu.be link  feltöltés', new_youtube_path, class: "btn btn-success text-light"
 
 table
   thead
