--- a/app/views/youtubes/index.html.slim
+++ b/app/views/youtubes/index.html.slim
@@ -1,71 +1,72 @@
 div     
-    - if current_user.present? 
-        h2 class="bg-light text-dark" Új link feltöltés:
-        br = link_to 'Új https://youtu.be link  feltöltés', new_youtube_path, class: "btn btn-success text-light"
+  - if current_user.present? 
+    h2 class="bg-light text-dark" Új link feltöltés:
+    br = link_to 'Új https://youtu.be link  feltöltés', new_youtube_path, class: "btn btn-success text-light"
 
 
 
 -case params[:done]
-            -when "0"
-                = link_to "NINCS KÉSZ", youtubes_path(:done => "0"), class: "btn btn-primary text-light m-2"            
-                = link_to "CSAK KÉSZ", youtubes_path(:done => "1"), class: "btn btn-success text-light m-2"
-                = link_to "MIND", youtubes_path(:done => "2"), class: "btn btn-success text-light m-2"
-            -when "1"
-                = link_to "NINCS KÉSZ", youtubes_path(:done => "0"), class: "btn btn-success text-light m-2"            
-                = link_to "CSAK KÉSZ", youtubes_path(:done => "1"), class: "btn btn-primary text-light m-2"
-                = link_to "MIND", youtubes_path(:done => "2"), class: "btn btn-success text-light m-2"
-            -else
-                = link_to "NINCS KÉSZ", youtubes_path(:done => "0"), class: "btn btn-success text-light m-2"            
-                = link_to "CSAK KÉSZ", youtubes_path(:done => "1"), class: "btn btn-success text-light m-2"
-                = link_to "MIND", youtubes_path(:done => "2"), class: "btn btn-primary text-light m-2"
+  -when "0"
+    = link_to "NINCS KÉSZ", youtubes_path(:done => "0"), class: "btn btn-primary text-light m-2"            
+    = link_to "CSAK KÉSZ", youtubes_path(:done => "1"), class: "btn btn-success text-light m-2"
+    = link_to "MIND", youtubes_path(:done => "2"), class: "btn btn-success text-light m-2"
+  -when "1"
+    = link_to "NINCS KÉSZ", youtubes_path(:done => "0"), class: "btn btn-success text-light m-2"            
+    = link_to "CSAK KÉSZ", youtubes_path(:done => "1"), class: "btn btn-primary text-light m-2"
+    = link_to "MIND", youtubes_path(:done => "2"), class: "btn btn-success text-light m-2"
+  -else
+    = link_to "NINCS KÉSZ", youtubes_path(:done => "0"), class: "btn btn-success text-light m-2"            
+    = link_to "CSAK KÉSZ", youtubes_path(:done => "1"), class: "btn btn-success text-light m-2"
+    = link_to "MIND", youtubes_path(:done => "2"), class: "btn btn-primary text-light m-2"
 
 
 div class="row"
-    div class="col-1"
-        | Kész:
-        = @images_info_true
-    div class="col-1"
-        |Várakozik: 
-        = @images_info_false
-    div class="col-1"
-        |Össz: 
-        = @images_info_all
+  div class="col-1"
+    | Kész:
+    = @youtubes_info_true
+  div class="col-1"
+    |Várakozik: 
+    = @youtubes_info_false
+  div class="col-1"
+    |Össz: 
+    = @youtubes_info_all
 
 div.digg_pagination
-    = will_paginate @youtubes, :container => false
+  = will_paginate @youtubes, :container => false
 
-table
+table.table.table-bordered.table-dark
   thead
     tr
-      th Link
-      th Title
+      th style="width:100px" ID
+      th style="width:300px" LINK
       th Desc
-      th
-      th
-      th
-      th
+      th style="width:300px" ACTION
+    
 
   tbody
     - @youtubes.each do |youtube|
-      tr
-        td class="#{ youtube.done ? 'bg-success' : '' }" 
+     tr  
+        td 
+          |#
+          = youtube.id
+        td class="col-md-1 #{ youtube.done ? 'bg-success' : '' }" 
 
           iframe src='https://www.youtube.com/embed/#{youtube.link.gsub('https://youtu.be', '')}?rel=0&autoplay=#{youtube.link.gsub('https://youtu.be', '')}' frameborder='0' allowfullscreen
+          br 
+           h3 =youtube.title
         td
-          h1 = youtube.title
-        td = youtube.desc
+          =youtube.desc
         td 
           - if current_user.admin?
             - if youtube.done?
               = link_to 'Nincs kész', done_youtube_path(youtube.id, id: youtube.id, done:false), class: 'btn btn-warning mr-2 btn-block', method: :post  
             -else
               = link_to 'Kész', done_youtube_path(youtube.id, id: youtube.id, done:true), class: 'btn btn-success mr-2 btn-block', method: :post
-        td = link_to 'Show', youtube,  class: "btn btn-primary text-light"
-        td = link_to 'Edit', edit_youtube_path(youtube),  class: "btn btn-primary text-light"
-        td 
+          = link_to 'Show', youtube,  class: "btn btn-primary text-light  btn-block"
+          = link_to 'Edit', edit_youtube_path(youtube),  class: "btn btn-primary text-light  btn-block"
           - if current_user.admin?
-            = link_to 'Destroy', youtube, data: { confirm: 'Are you sure?' }, method: :delete, class: "btn btn-danger text-light"
+            = link_to 'Destroy', youtube, data: { confirm: 'Are you sure?' }, method: :delete, class: "btn btn-danger text-light btn-block"
 
-br
+
 
 
