--- a/app/views/images/show.html.slim
+++ b/app/views/images/show.html.slim
@@ -2,7 +2,7 @@
 
 
 = simple_form_for @comment do |f|
-    = f.input :idea, :input_html => {resize: 'none', :rows => 7 , :style => 'width: 500px;'}
+    = f.input :idea, :input_html => {resize: 'none', :rows => 20 , :style => 'width: 50%;'}
     = f.hidden_field :image_id, :value => @image.id
     = f.hidden_field :user_id, :value => current_user.id
         
