--- a/app/views/images/index.html.slim
+++ b/app/views/images/index.html.slim
@@ -44,8 +44,7 @@ table.table.table-bordered.table-dark
     - @images.each do |image|
         tr  
             td
-                |#
-                = image.id
+                = link_to "# #{image.id}", image_path(image.id), class: "btn btn-link"
             td  class="#{ image.done ? 'bg-success' : 'bg-dark' }"  
                 a data-target="#modalIMG_#{image.id}" data-toggle="modal" href="#" class="color-gray-darker td-hover-none"
 				    div class="ba-0 tp-s"
