Youtube page javítás

--- a/app/views/youtubes/index.html.slim
+++ b/app/views/youtubes/index.html.slim
@@ -38,8 +38,8 @@ table.table.table-dark
   thead
     tr
       th style="width: 100px;" ID
-      th style="width: 100px;" LINK
-      th style="width: 100px;" Desc
+      th style="width: 300px;" LINK
+      th Desc
       th style="width: 300px;" ACTION
     
 
