--- a/app/views/images/index.html.slim
+++ b/app/views/images/index.html.slim
@@ -42,10 +42,10 @@ table.table.table-bordered.table-dark
             td COMMENTS
             td style="width:300px" ACTION
     - @images.each do |image|
-        tr  
-            td
+        tr id="#{image.id}"  
+            td id="id_#{image.id}"
                 = link_to "# #{image.id}", image_path(image.id), class: "btn btn-link"
-            td  class="#{ image.done ? 'bg-success' : 'bg-dark' }"  
+            td id="image_#{image.id}" class="#{ image.done ? 'bg-success' : 'bg-dark' }"  
                 a data-target="#modalIMG_#{image.id}" data-toggle="modal" href="#" class="color-gray-darker td-hover-none"
 				    div class="ba-0 tp-s"
                         = image_tag image.image.variant(resize_to_limit: [300, 300]).processed, class: "" if image.image.present?
@@ -53,7 +53,7 @@ table.table.table-bordered.table-dark
 						    h4 class="card-title color-gray-darker" = image.title
 						    p class="card-text color-gray-darker" = image.description
 				
-            td
+            td id="comment_#{image.id}"  
                 - image.comments.each do |com|
                     div class="comment-box bg-dark"
 	                    div class="heading"
@@ -77,13 +77,16 @@ table.table.table-bordered.table-dark
             td 
                 - if current_user.present? 
                     - if current_user.admin? 
+                        
                         - if image.done?
-                            = link_to 'Nincs kész', done_path(image.id, id: image.id, done:false), class: 'btn btn-warning mr-2 btn-block', method: :post, remote: true   
+                            div data-controller="done"
+                                =link_to 'Nincs kész', done_path(image, id: image.id, done: false), :"id" => image.id, :"data-target" => "done.heading",:"data-action" => "click->done#notdone",:"name" => "pittyu", remote: true, method: :post, class: "mb-2 done btn btn-warning text-light btn-block"
                         -else
-                            = link_to 'Kész', done_path(image.id, id: image.id, done:true), class: 'btn btn-success mr-2 btn-block', method: :post, remote: true 
-                            = link_to "Módosít", edit_image_path(image.id), class: "btn btn-primary mr-2 btn-block"
-                            = link_to "Töröl", image_path(image.id), method: 'delete', data: { confirm: 'Biztos vagy benne tesó??' }, class: "btn btn-primary mr-2 btn-block"
-                        = link_to "Kommentár", image_path(image.id), class: "btn btn-success btn-block"
+                            div data-controller="done" data-done-id="#{image.id}"
+                                =link_to 'Kesz', done_path(image, id: image.id, done:true), :"id" => image.id, :"data-target" => "done.heading",:"data-action" => "click->done#done",:"name" => "pittyu", remote: true, method: :post, class: "mb-2 done btn btn-success text-light btn-block"
+                            = link_to "Módosít", edit_image_path(image), class: "btn btn-primary mr-2 btn-block text-light"
+                            = link_to "Töröl", image_path(image), method: 'delete', data: { confirm: 'Biztos vagy benne tesó??' }, class: "btn btn-primary mr-2 btn-block text-light"
+                        = link_to "Kommentár", image_path(image), class: "btn btn-success btn-block text-light"
         
   
 div.digg_pagination
