--- a/app/views/images/index.html.slim
+++ b/app/views/images/index.html.slim
@@ -48,7 +48,7 @@ table.table.table-bordered.table-dark
               button data-action="done#done" Done
               button data-action="done#notdone" Notdone
 
-              div date-blog-target="heading"
+              div date-done-target="heading"
 
               = link_to "# #{image.id}", image_path(image.id), class: "btn btn-link"
             td class="#{ image.done ? 'bg-success' : 'bg-dark' }"
