--- a/app/views/comments/index.html.slim
+++ b/app/views/comments/index.html.slim
@@ -1,23 +1,21 @@
-div class="bg-dark"
-
-    table class=""
-        
+.bg-dark
+    table        
         - @comment.each do |c|
             tr class=""
                 td
-                    div class="comment-box bg-dark text-light"
-                        div class="heading"
+                    .comment-box.bg-dark.text-light
+                        .heading
                             span style="font-size: 48px; color: gray;"
                                 i class="fas fa-user"
-                        div class="content"
-                            div class="h-in"
-                                div class="cont text-light"
+                        .content
+                            .h-in
+                                .cont.text-light
                                     strong 
                                         = c.user.username.capitalize()
                                     small class="pull-right m-2" = c.created_at
                                     br
                                 p class="text-dark" = simple_format(c.idea).gsub(URI.regexp, '<a href="\0" target="_blank" class="btn btn-link text-light">Link</a>').html_safe
-                            div class="c-f"
+                            c-f
                                 - if current_user.admin?
                                     = link_to "Edit", edit_comment_path(c), class: "btn btn-primary"
 
