--- a/app/views/youtubes/index.html.slim
+++ b/app/views/youtubes/index.html.slim
@@ -57,9 +57,14 @@ table.table.table-dark
         td 
           - if current_user.admin?
             - if youtube.done?
-              = link_to 'Nincs kész', done_youtube_path(youtube.id, id: youtube.id, done:false), class: 'btn btn-warning mr-2 btn-block', method: :post  
+              div data-controller="done"
+                =link_to 'Nincs kész', done_youtube_path(youtube, id: youtube.id, done: false), :"id" => youtube.id, :"data-target" => "done.heading",:"data-action" => "click->done#notdone",:"name" => "pittyu", remote: true, method: :post, class: "mb-2 done btn btn-warning text-light btn-block"
             -else
-              = link_to 'Kész', done_youtube_path(youtube.id, id: youtube.id, done:true), class: 'btn btn-success mr-2 btn-block', method: :post
+              div data-controller="done" data-done-id="#{youtube.id}"
+                =link_to 'Kesz', done_youtube_path(youtube, id: youtube.id, done:true), :"id" => youtube.id, :"data-target" => "done.heading",:"data-action" => "click->done#done",:"name" => "pittyu", remote: true, method: :post, class: "mb-2 done btn btn-success text-light btn-block"
+            
+            
+            
           = link_to 'Show', youtube,  class: "btn btn-primary text-light  btn-block"
           = link_to 'Edit', edit_youtube_path(youtube),  class: "btn btn-primary text-light  btn-block"
           - if current_user.admin?
