--- a/app/views/images/index.html.slim
+++ b/app/views/images/index.html.slim
@@ -73,6 +73,12 @@ table.table.table-bordered.table-dark
                                     small.pull-right.m-2 = com.created_at
                                     br
                                 p = simple_format(com.idea).gsub(URI.regexp, '<a href="\0" target="_blank" class="btn btn-success text-light">Link</a>').html_safe
+                                - d = com.idea.gsub(/http[s]?:\/\/(.+)/i)
+                                - x = "http://gtav.forditas.xyz/index.php?m=forditas4&link_id="
+                                -d.each do |s|
+                                    - s = s.strip
+                                    - x += "-" + s.gsub!("http://gtav.forditas.xyz/index.php?m=forditas&s=","").to_s
+                                = link_to "Autó_Össz_Link", x, class:"btn btn-danger mb-2 text-light", target: "_blank"
                                     
                             .c-f
                                 - if current_user.present? 
