--- a/app/views/images/index.html.slim
+++ b/app/views/images/index.html.slim
@@ -72,15 +72,17 @@ table.table.table-bordered.table-dark
                                         = com.user.username.capitalize()
                                     small.pull-right.m-2 = com.created_at
                                     br
-                                p = simple_format(com.idea).gsub(URI.regexp, '<a href="\0" target="_blank" class="btn btn-success text-light">Link</a>').html_safe
+                               
                                 - d = com.idea.gsub(/http[s]?:\/\/(.+)/i)
                                 - x = "http://gtav.forditas.xyz/index.php?m=forditas4&link_id="
                                 -d.each do |s|
                                     - s = s.strip
                                     - x += "-" + s.gsub!("http://gtav.forditas.xyz/index.php?m=forditas&s=","").to_s
                                 -if com.idea.include? "http://gtav.forditas.xyz/index.php?m=forditas"
-                                    = link_to "Autó_Össz_Link", x, class:"btn btn-danger mb-2 text-light", target: "_blank"
-                                
+                                    -if com.idea.scan(/(?=#{'http://'})/).count >1
+                                        = link_to "Autó_Össz_Link", x, class:"btn btn-danger mb-2 text-light", target: "_blank"
+                                    hr style="background-color: white; height: 1px; border: 0;"
+                                p = simple_format(com.idea).gsub(URI.regexp, '<a href="\0" target="_blank" class="btn btn-success text-light mb-2">Link</a>').html_safe 
                                 
                                     
                             .c-f
