--- a/app/views/comments/index.html.slim
+++ b/app/views/comments/index.html.slim
@@ -18,6 +18,7 @@
                             c-f
                                 - if current_user.admin?
                                     = link_to "Edit", edit_comment_path(c), class: "btn btn-primary"
+                                    = link_to "Delete", comment_path(c), class: "btn btn-primary", method: "delete"
 
 
             
