Jogrendszer helyre téve, TODO megjelenése

--- a/app/views/shared/_menu.html.erb
+++ b/app/views/shared/_menu.html.erb
@@ -30,6 +30,9 @@
                   <%= link_to "Users", users_path, class: "nav-link"  %>
                 </li>
                 <li class="nav-item active">
+                  <%= link_to "TODO", todos_path, class: "nav-link"  %>
+                </li>
+                <li class="nav-item active">
                   <%= link_to "Comments", comments_path, class: "nav-link"  %>
                 </li>
                 
