--- a/app/views/todos/_form.html.slim
+++ b/app/views/todos/_form.html.slim
@@ -1,23 +1,22 @@
-= form_for @todo do |f|
-  - if @todo.errors.any?
-    #error_explanation
-      h2 = "#{pluralize(@todo.errors.count, "error")} prohibited this todo from being saved:"
-      ul
-        - @todo.errors.full_messages.each do |message|
-          li = message
+.container.bg-info.shadow-lg.rounded.col-4
+  = form_for @todo do |f|
+    - if @todo.errors.any?
+      #error_explanation
+        h2 = "#{pluralize(@todo.errors.count, "error")} prohibited this todo from being saved:"
+        ul
+          - @todo.errors.full_messages.each do |message|
+            li = message
 
-  .field
-    = f.label :name
-    = f.text_field :name
-  .field
-    = f.label :description
-    = f.text_area :description
-  .field
-    = f.label :prior
-    = f.number_field :prior
-  .field
-    = f.label :done
-    = f.check_box :done
-  - if current_user.present? 
-    - if current_user.admin? 
-      .actions = f.submit
+    .field
+      = f.label "A feladat neve:", class: "text-light col-12"
+      = f.text_field :name, class:"form-control col-12"
+    .field
+      = f.label "A feladat leírása:", class: "text-light"
+      = f.text_area :description, rows: 10, class: "form-control"
+    .field
+      = f.label "prior 0 fontos -> 3 Nem fontos"
+      = f.number_field :prior, in: 0..3, class: "form-control col-12", value: "3"
+      = f.hidden_field :user_id, :value => current_user.id
+    - if current_user.present? 
+      - if current_user.admin? 
+        .actions = f.submit
