--- a/app/views/todos/edit.html.slim
+++ b/app/views/todos/edit.html.slim
@@ -2,7 +2,7 @@ h1 Editing todo
 
 == render 'form'
 
-=> link_to 'Show', @todo
+=> link_to 'Megnéz', @todo, class: "btn btn-primary text-light"
 '|
-=< link_to 'Back', todos_path
+=< link_to 'Vissza', todos_path, class: "btn btn-primary text-light"
 
