--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
     <%= render partial: "shared/notice" %>
   <% end %>
 </div>
-
+>
 
   <% if current_user.present? %>
     Üdvözöllek: <%= current_user.username.capitalize() %> <br>
@@ -26,7 +26,7 @@
  
   <% end %>
   <%= render 'shared/menu' %>
-   <div class="container-fluid">
+   <div class="container-fluid p-5">
   <%= yield %>
   
     </div>
