--- a/app/assets/stylesheets/todos.scss
+++ b/app/assets/stylesheets/todos.scss
@@ -4,8 +4,8 @@
 body {
     margin: 0;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-    font-size: 0.88rem;
-    font-weight: 400;
+    font-size: large;
+    font-weight: 800;
     line-height: 1.5;
     color: #495057;
     text-align: left;
@@ -43,7 +43,7 @@ i {
 
 .widget-subheading {
     color: #858a8e;
-    font-size: 10px
+    font-size: 15px
 }
 
 .card-header.card-header-tab .card-header-title {
@@ -118,7 +118,8 @@ i {
     display: flex;
     flex: 1;
     position: relative;
-    align-items: center
+    align-items: center;
+    font-size: large;
 }
 
 .widget-content .widget-content-right.widget-content-actions {
@@ -128,6 +129,7 @@ i {
 }
 
 .widget-content .widget-content-right {
+    
     margin-left: auto
 }
 
