--- a/app/views/images/index.html.slim
+++ b/app/views/images/index.html.slim
@@ -1,6 +1,6 @@
 div
     - if current_user.present? 
-        h2.bg-light.text-dark Új kép feltöltés:
+        h2.text-dark Új kép feltöltés:
         br
         = link_to "Feltöltés", new_image_path, class: "btn btn-success m-2"
         
