--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,15 +18,14 @@
     <%= render partial: "shared/notice" %>
   <% end %>
 </div>
->
-
+<br>
   <% if current_user.present? %>
-    Üdvözöllek: <%= current_user.username.capitalize() %> <br>
+  Üdvözöllek: <%= current_user.username.capitalize() %> <br>
   <% else %>
  
   <% end %>
   <%= render 'shared/menu' %>
-   <div class="container-fluid p-5">
+   <div class="container-fluid">
   <%= yield %>
   
     </div>
