--- a/app/views/images/index.html.slim
+++ b/app/views/images/index.html.slim
@@ -38,9 +38,10 @@ table.table.table-bordered.table-dark
       td style="width:100px" ID
       td style="width:300px" IMAGE
       td COMMENTS
+     
       td style="width:300px" ACTION
     - @images.each do |image|
-        tr data-controller="done" data-done-target="heading" data-done-id=image.id
+        tr id="tr_#{image.id}"
             td
 
              
@@ -85,19 +86,16 @@ table.table.table-bordered.table-dark
                                         = link_to "Kommentár", image_path(image.id), class: "btn btn-success text-light "  
                                         = link_to "Edit", edit_comment_path(com), class: "btn btn-primary text-light "
                                         = link_to "Töröl", com , method: "DELETE", class: "btn btn-primary text-light "
-            td 
-                - if current_user.present? 
-                    - if current_user.admin? 
-                        
-                        - if image.done?
-                            div data-controller="done"
-                                =link_to 'Nincs kész', done_path(image, id: image.id, done: false), :"id" => image.id, :"data-target" => "done.heading",:"data-action" => "click->done#notdone",:"name" => "pittyu", remote: true, method: :post, class: "mb-2 done btn btn-warning text-light btn-block"
-                        -else
-                            div data-controller="done" data-done-id="#{image.id}"
-                                =link_to 'Kesz', done_path(image, id: image.id, done:true), :"id" => image.id, :"data-target" => "done.heading",:"data-action" => "click->done#done",:"name" => "pittyu", remote: true, method: :post, class: "mb-2 done btn btn-success text-light btn-block"
-                            = link_to "Módosít", edit_image_path(image), class: "btn btn-primary mr-2 btn-block text-light"
-                            = link_to "Töröl", image_path(image), method: 'delete', data: { confirm: 'Biztos vagy benne tesó??' }, class: "btn btn-primary mr-2 btn-block text-light"
-                        = link_to "Kommentár", image_path(image), class: "btn btn-success btn-block text-light"
+            td
+                -if image.done?
+                    =link_to "NINCS KÉSZ", "#", :"id" => "DONE_#{image.id}",:"name" => image.id, :"info" =>"false", remote: true, method: :post, class: "btn btn-warning"
+                -else
+                    =link_to "ELKÉSZÜLT", "#", :"id" => "DONE_#{image.id}",:"name" => image.id, :"info" =>"true", remote: true, method: :post, class: "btn btn-warning"
+                = link_to "Módosít", edit_image_path(image), class: "btn btn-primary mr-2 btn-block text-light"
+                = link_to "Töröl", image_path(image), method: 'delete', data: { confirm: 'Biztos vagy benne tesó??' }, class: "btn btn-primary mr-2 btn-block text-light"
+                = link_to "Kommentár", image_path(image), class: "btn btn-success btn-block text-light"
+
+                         
         
   
 .digg_pagination
