--- a/app/views/images/index.html.slim
+++ b/app/views/images/index.html.slim
@@ -43,8 +43,6 @@ table.table.table-bordered.table-dark
     - @images.each do |image|
         tr id="tr_#{image.id}"
             td
-
-             
               = link_to "# #{image.id}", image_path(image.id), class: "btn btn-link"
             td class="#{ image.done ? 'bg-success' : 'bg-dark' }"
                 a.color-gray-darker.td-hover-none data-target="#modalIMG_#{image.id}" data-toggle="modal" href="#"
@@ -88,9 +86,9 @@ table.table.table-bordered.table-dark
                                         = link_to "Töröl", com , method: "DELETE", class: "btn btn-primary text-light "
             td
                 -if image.done?
-                    =link_to "NINCS KÉSZ", "#", :"id" => "DONE_#{image.id}",:"name" => image.id, :"info" =>"false", remote: true, method: :post, class: "btn btn-warning"
+                    =link_to "NINCS KÉSZ", donetwo_path(id: image.id, done: "false"), :"id" => "DONE_#{image.id}",:"name" => image.id, :"info" =>"false", remote: true, method: :post, class: "btn btn-warning"
                 -else
-                    =link_to "ELKÉSZÜLT", "#", :"id" => "DONE_#{image.id}",:"name" => image.id, :"info" =>"true", remote: true, method: :post, class: "btn btn-warning"
+                    =link_to "ELKÉSZÜLT", donetwo_path(id: image.id, done: "true"), :"id" => "DONE_#{image.id}",:"name" => image.id, :"info" =>"true", remote: true, method: :post, class: "btn btn-warning"
                 = link_to "Módosít", edit_image_path(image), class: "btn btn-primary mr-2 btn-block text-light"
                 = link_to "Töröl", image_path(image), method: 'delete', data: { confirm: 'Biztos vagy benne tesó??' }, class: "btn btn-primary mr-2 btn-block text-light"
                 = link_to "Kommentár", image_path(image), class: "btn btn-success btn-block text-light"
